--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <button onclick="calculate()">Calcular</button>
     <div class="result" id="result"></div>
 </div>
-
+</h1> sosa rios shaila de los angeles,del angel salas jacqueline,ramirez avila juan jesus
 <script>
     function calculate() {
         // Obtener la expresión ingresada por el usuario
